# Sigma-AI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  start.sh
.github/workflows/: deploy_staging.yml
flaskr/: __init__.py  auth.py  crud.py  models.py  routes.py
flaskr/templates/: index.html
flaskr/templates/auth/: login.html
migrations/versions/: 95c91d22ac2c_add_password_hash_to_user.py  c653ca549125_initial_migration_with_user_skill_.py  ec628709828c_add_password_hash_to_user.py
tests/: conftest.py  test_auth.py  test_crud.py  test_factory.py  test_models.py  test_routes.py
